[package]
name = "io_uring_detector"
version = "0.1.0"
edition = "2021"
authors = ["sid6224"]
description = "A tool to detect io_uring usage on Linux systems"

[dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["feature"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true 
